<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.menaka.tell_president.result_tamil"
    android:background="@drawable/form_background"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@drawable/iform">

    </LinearLayout>



    <TextView
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/success_sinhala"
        android:layout_gravity="center"
        android:gravity="center"
        android:foregroundGravity="center"
        android:textSize="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ref_no_is_sinhala"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:id="@+id/txt_sinhala"/>

    <Button
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/home_button_sinhala"

        android:layout_gravity="center"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="40dp"
        android:id="@+id/back"
        android:background="@android:color/white"/>



</LinearLayout>
