<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.menaka.tell_president.Login"
    android:background="@drawable/log2">


    <Button
        android:text="@string/log_button_tamil"
        android:textColor="@android:color/white"
        android:layout_width="80dp"
        android:textSize="12dp"
        android:layout_height="40dp"
        android:id="@+id/button_Tamil"
        android:background="@drawable/button"
        android:layout_marginLeft="25dp"
        android:shadowRadius="250"
        android:layout_alignTop="@+id/button_English"
        android:layout_toRightOf="@+id/button_English"
        android:layout_toEndOf="@+id/button_English"

        />

    <Button
        android:text="@string/log_button_english"
        android:textSize="12dp"
        android:textColor="@android:color/white"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/button_English"
        android:background="@drawable/button"
        android:layout_alignTop="@+id/button_sinhala"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"/>

    <Button
        android:text="@string/log_button_sinhala"
        android:layout_width="80dp"
        android:textSize="12dp"
        android:textColor="@android:color/white"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/button_sinhala"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_English"
        android:layout_toStartOf="@+id/button_English"
        android:layout_marginLeft="25dp"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="1000dp"
        />


</RelativeLayout>




